feat: job-list add query manualOnly
