# apps/api/swagger.json
@@ -402,6 +402,14 @@
               "type": "string"
             },
             "description": "模糊搜索关键词"
+          },
+          {
+            "in": "query",
+            "name": "manualOnly",
+            "schema": {
+              "type": "boolean"
+            },
+            "description": "仅查询手动上传的岗位"
           }
         ],
         "responses": {
